# grocery-agent

./: .env.example  .gitignore  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml
.kiro/steering/: product.md  structure.md  tech.md
config/: app.yaml
docs/: claude_project_instructions.md
src/: __init__.py  config.py  database.py  exceptions.py  mcp_instance.py  models.py  oauth_callback.py  server.py
src/kroger/: oauth_handler.py
src/tools/: __init__.py  auth.py  cart.py  location.py  memory.py  products.py
src/utils/: api_logging.py
tests/: conftest.py  test_auth_tools.py  test_cart_tools.py  test_location_tools.py  test_oauth_callback.py  test_product_tools.py
